# QClipboard

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_zh.md
.github/workflows/: build.yml  building.yml  cmake-building.yml  linux-build.yml  linux_package.yml  package_platforms.yml  win_package.yml  windows-build.yml
scripts/: README.md  build_linux_package.py  build_macos_package.py  build_nsis_package.py  build_windows_package.py  nsis_package.nsi
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  Clipboard.cpp  Clipboard.h  Clipboard.qrc  CustomToolTip.cpp  CustomToolTip.h  CustomToolTip.ui  Item.cpp  Item.h  Item.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  version.h.in
src/net/: CMakeLists.txt  ClipboardApiClient.cpp  ClipboardApiClient.h  ClipboardStruct.h  ClipboardWebSocketClient.cpp  ClipboardWebSocketClient.h  ProtocolCommon.h  ProtocolHandler.cpp  ProtocolHandler.h  ProtocolRegistry.cpp  ProtocolRegistry.h  SyncServer.cpp  SyncServer.h
src/resources/: style.css  style_dark.css
src/resources/linux/: Floward.desktop.in  QClipboard.desktop.in
src/resources/mac/: icon.icns
src/utils/: AutoStartup.cpp  AutoStartup.h  CMakeLists.txt  Config.cpp  Config.h  Logger.hpp  ProtocolHandler.cpp  ProtocolHandler.h  ProtocolRegistry.cpp  ProtocolRegistry.h  Util.cpp  Util.h
